@startuml CollabSphere_ERD_37_Tables

' ===========================
' STYLING & CONFIGURATION
' ===========================
skinparam linetype ortho
skinparam nodesep 80
skinparam ranksep 100
skinparam backgroundColor #FAFAFA
skinparam shadowing false

skinparam entity {
  BackgroundColor #FFFFFF
  BorderColor #757575
  BorderThickness 2
  FontName Arial
  FontSize 11
}

skinparam package {
  BackgroundColor #F5F5F5
  BorderColor #BDBDBD
  BorderThickness 1.5
  FontStyle bold
}

!define PRIMARY_KEY(x) <b><color:#FFD700>🔑 x</color></b>
!define FOREIGN_KEY(x) <color:#4169E1>🔗 x</color>
!define UNIQUE(x) <color:#32CD32>⚡ x</color>

' ===========================
' ZONE 1: USERS & ACADEMIC
' ===========================
package "Zone 1: Users & Academic" #E3F2FD {

entity "users" as users {
  PRIMARY_KEY(id) : INTEGER
  --
  UNIQUE(username) : VARCHAR(50)
  UNIQUE(email) : VARCHAR(100)
  hashed_password : VARCHAR
  full_name : VARCHAR(100)
  role : ENUM
  avatar_url : VARCHAR
  phone : VARCHAR(20)
  is_active : BOOLEAN
  last_login : TIMESTAMP
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "subjects" as subjects {
  PRIMARY_KEY(id) : INTEGER
  --
  UNIQUE(code) : VARCHAR(20)
  name : VARCHAR(200)
  description : TEXT
  credits : INTEGER
  is_active : BOOLEAN
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "curricula" as curricula {
  PRIMARY_KEY(id) : INTEGER
  --
  FOREIGN_KEY(subject_id) : INTEGER
  title : VARCHAR(200)
  description : TEXT
  learning_outcomes : TEXT
  content_outline : TEXT
  duration_weeks : INTEGER
  is_active : BOOLEAN
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "classes" as classes {
  PRIMARY_KEY(id) : INTEGER
  --
  UNIQUE(code) : VARCHAR(20)
  name : VARCHAR(200)
  FOREIGN_KEY(subject_id) : INTEGER
  FOREIGN_KEY(lecturer_id) : INTEGER
  semester : ENUM
  academic_year : VARCHAR(10)
  max_students : INTEGER
  is_active : BOOLEAN
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "class_members" as class_members {
  PRIMARY_KEY(id) : INTEGER
  --
  FOREIGN_KEY(class_id) : INTEGER
  FOREIGN_KEY(user_id) : INTEGER
  joined_at : TIMESTAMP
}

entity "class_projects" as class_projects {
  PRIMARY_KEY(id) : INTEGER
  --
  FOREIGN_KEY(class_id) : INTEGER
  FOREIGN_KEY(project_id) : INTEGER
  FOREIGN_KEY(assigned_by) : INTEGER
  assigned_at : TIMESTAMP
}
}

' ===========================
' ZONE 2: PROJECTS & GROUPS
' ===========================
package "Zone 2: Projects & Groups" #FFF3E0 {

entity "projects" as projects {
  PRIMARY_KEY(id) : INTEGER
  --
  title : VARCHAR(200)
  description : TEXT
  goals : TEXT
  requirements : TEXT
  FOREIGN_KEY(curriculum_id) : INTEGER
  FOREIGN_KEY(creator_id) : INTEGER
  duration_weeks : INTEGER
  max_group_size : INTEGER
  min_group_size : INTEGER
  status : ENUM
  FOREIGN_KEY(approved_by) : INTEGER
  approved_at : TIMESTAMP
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "project_milestones" as project_milestones {
  PRIMARY_KEY(id) : INTEGER
  --
  FOREIGN_KEY(project_id) : INTEGER
  title : VARCHAR(200)
  description : TEXT
  week_number : INTEGER
  deliverables : TEXT
  order : INTEGER
  created_at : TIMESTAMP
}

entity "milestone_questions" as milestone_questions {
  PRIMARY_KEY(id) : INTEGER
  --
  FOREIGN_KEY(milestone_id) : INTEGER
  question : TEXT
  description : TEXT
  order : INTEGER
  created_at : TIMESTAMP
}

entity "groups" as groups {
  PRIMARY_KEY(id) : INTEGER
  --
  name : VARCHAR(100)
  FOREIGN_KEY(class_id) : INTEGER
  FOREIGN_KEY(project_id) : INTEGER
  description : TEXT
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "group_members" as group_members {
  PRIMARY_KEY(id) : INTEGER
  --
  FOREIGN_KEY(group_id) : INTEGER
  FOREIGN_KEY(user_id) : INTEGER
  role : ENUM
  contribution_score : FLOAT
  joined_at : TIMESTAMP
}

entity "group_milestones" as group_milestones {
  PRIMARY_KEY(id) : INTEGER
  --
  FOREIGN_KEY(group_id) : INTEGER
  FOREIGN_KEY(milestone_id) : INTEGER
  is_completed : BOOLEAN
  completed_at : TIMESTAMP
  FOREIGN_KEY(completed_by) : INTEGER
  notes : TEXT
}

entity "checkpoints" as checkpoints {
  PRIMARY_KEY(id) : INTEGER
  --
  FOREIGN_KEY(group_id) : INTEGER
  title : VARCHAR(200)
  description : TEXT
  due_date : TIMESTAMP
  status : ENUM
  FOREIGN_KEY(created_by) : INTEGER
  created_at : TIMESTAMP
}

entity "checkpoint_assignments" as checkpoint_assignments {
  PRIMARY_KEY(id) : INTEGER
  --
  FOREIGN_KEY(checkpoint_id) : INTEGER
  FOREIGN_KEY(user_id) : INTEGER
  assigned_at : TIMESTAMP
}

entity "checkpoint_submissions" as checkpoint_submissions {
  PRIMARY_KEY(id) : INTEGER
  --
  FOREIGN_KEY(checkpoint_id) : INTEGER
  FOREIGN_KEY(submitted_by) : INTEGER
  content : TEXT
  file_url : VARCHAR
  submitted_at : TIMESTAMP
}

entity "workspace_cards" as workspace_cards {
  PRIMARY_KEY(id) : INTEGER
  --
  FOREIGN_KEY(group_id) : INTEGER
  title : VARCHAR(100)
  description : TEXT
  position : INTEGER
  color : VARCHAR(20)
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "tasks" as tasks {
  PRIMARY_KEY(id) : INTEGER
  --
  FOREIGN_KEY(group_id) : INTEGER
  FOREIGN_KEY(card_id) : INTEGER
  title : VARCHAR(200)
  description : TEXT
  status : ENUM
  priority : ENUM
  FOREIGN_KEY(assigned_to) : INTEGER
  due_date : TIMESTAMP
  FOREIGN_KEY(created_by) : INTEGER
  FOREIGN_KEY(parent_task_id) : INTEGER
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}
}

' ===========================
' ZONE 3: COLLABORATION
' ===========================
package "Zone 3: Collaboration" #E8F5E9 {

entity "meetings" as meetings {
  PRIMARY_KEY(id) : INTEGER
  --
  FOREIGN_KEY(group_id) : INTEGER
  title : VARCHAR(200)
  description : TEXT
  scheduled_at : TIMESTAMP
  duration_minutes : INTEGER
  status : ENUM
  meeting_url : VARCHAR
  FOREIGN_KEY(created_by) : INTEGER
  created_at : TIMESTAMP
  started_at : TIMESTAMP
  ended_at : TIMESTAMP
}

entity "meeting_participants" as meeting_participants {
  PRIMARY_KEY(id) : INTEGER
  --
  FOREIGN_KEY(meeting_id) : INTEGER
  FOREIGN_KEY(user_id) : INTEGER
  is_host : BOOLEAN
  joined_at : TIMESTAMP
  left_at : TIMESTAMP
}

entity "chat_messages" as chat_messages {
  PRIMARY_KEY(id) : INTEGER
  --
  FOREIGN_KEY(group_id) : INTEGER
  FOREIGN_KEY(sender_id) : INTEGER
  content : TEXT
  message_type : VARCHAR
  file_url : VARCHAR
  is_edited : BOOLEAN
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "resources" as resources {
  PRIMARY_KEY(id) : INTEGER
  --
  name : VARCHAR(255)
  description : TEXT
  file_url : VARCHAR
  file_size : INTEGER
  file_type : VARCHAR
  resource_type : ENUM
  FOREIGN_KEY(class_id) : INTEGER
  FOREIGN_KEY(group_id) : INTEGER
  FOREIGN_KEY(uploaded_by) : INTEGER
  created_at : TIMESTAMP
}

entity "whiteboard_sessions" as whiteboard_sessions {
  PRIMARY_KEY(id) : INTEGER
  --
  FOREIGN_KEY(group_id) : INTEGER
  name : VARCHAR(200)
  data : TEXT
  FOREIGN_KEY(created_by) : INTEGER
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "document_sessions" as document_sessions {
  PRIMARY_KEY(id) : INTEGER
  --
  FOREIGN_KEY(group_id) : INTEGER
  title : VARCHAR(200)
  content : TEXT
  FOREIGN_KEY(created_by) : INTEGER
  created_at : TIMESTAMP
}

' ===========================
' ZONE 4: EVALUATION
' ===========================
package "Zone 4: Evaluation" #F3E5F5 {
' ZONE 4: EVALUATION
' ===========================

entity "peer_reviews" as peer_reviews {
  PRIMARY_KEY(id) : INTEGER
  --
  FOREIGN_KEY(reviewer_id) : INTEGER
  FOREIGN_KEY(reviewee_id) : INTEGER
  FOREIGN_KEY(group_id) : INTEGER
  score : FLOAT
  cooperation_score : FLOAT
  contribution_score : FLOAT
  communication_score : FLOAT
  feedback : TEXT
  is_anonymous : BOOLEAN
  created_at : TIMESTAMP
}

entity "group_evaluations" as group_evaluations {
  PRIMARY_KEY(id) : INTEGER
  --
  FOREIGN_KEY(group_id) : INTEGER
  FOREIGN_KEY(evaluator_id) : INTEGER
  score : FLOAT
  feedback : TEXT
  criteria_scores : TEXT
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "member_evaluations" as member_evaluations {
  PRIMARY_KEY(id) : INTEGER
  --
  FOREIGN_KEY(member_id) : INTEGER
  FOREIGN_KEY(evaluator_id) : INTEGER
  FOREIGN_KEY(group_id) : INTEGER
  score : FLOAT
  contribution_assessment : TEXT
  feedback : TEXT
  created_at : TIMESTAMP
}

entity "milestone_answers" as milestone_answers {
  PRIMARY_KEY(id) : INTEGER
  --
  FOREIGN_KEY(question_id) : INTEGER
  FOREIGN_KEY(user_id) : INTEGER
  FOREIGN_KEY(group_id) : INTEGER
  answer : TEXT
  feedback : TEXT
  score : FLOAT
  created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "checkpoint_evaluations" as checkpoint_evaluations {
  PRIMARY_KEY(id) : INTEGER
  --
  FOREIGN_KEY(checkpoint_id) : INTEGER
  FOREIGN_KEY(evaluator_id) : INTEGER
  score : FLOAT
  feedback : TEXT
}

' ===========================
' ZONE 5: NOTIFICATIONS
' ===========================
package "Zone 5: Notifications" #FFF9C4 {
' ZONE 5: NOTIFICATIONS
' ===========================

entity "notifications" as notifications {
  PRIMARY_KEY(id) : INTEGER
  --
  FOREIGN_KEY(user_id) : INTEGER
  type : ENUM
  title : VARCHAR(200)
  message : TEXT
  link : VARCHAR
  is_read : BOOLEAN
}

' ===========================
' ZONE 6: ADDITIONAL (OPTIONAL)
' ===========================
package "Zone 6: Additional" #FAFAFA {

' ===========================
' ZONE 6: ADDITIONAL (OPTIONAL)
' ===========================

entity "activity_logs" as activity_logs {
  PRIMARY_KEY(id) : INTEGER
  --
  FOREIGN_KEY(user_id) : INTEGER
  action : VARCHAR(100)
  entity_type : VARCHAR(50)
}

' ===========================
' LAYOUT HINTS
' ===========================

' Zone 1 horizontal layout
subjects -[hidden]right- curricula
curricula -[hidden]right- classes
classes -[hidden]down- class_members
class_members -[hidden]right- class_projects

' Zone 2 layout
projects -[hidden]right- project_milestones
project_milestones -[hidden]right- milestone_questions
groups -[hidden]down- group_members
group_members -[hidden]right- group_milestones
checkpoints -[hidden]right- checkpoint_assignments
checkpoint_assignments -[hidden]right- checkpoint_submissions
workspace_cards -[hidden]right- tasks

' Zone 3 layout
meetings -[hidden]right- meeting_participants
chat_messages -[hidden]right- resources
whiteboard_sessions -[hidden]right- document_sessions

' Zone 4 layout
peer_reviews -[hidden]right- group_evaluations
member_evaluations -[hidden]right- milestone_answers
checkpoint_evaluations -[hidden]up- milestone_answers

' Cross-zone positioning
users -[hidden]down- projects
classes -[hidden]down- groups
groups -[hidden]down- meetings
  entity_id : INTEGER
  details : TEXT
  created_at : TIMESTAMP
}

' ===========================
' RELATIONSHIPS
' ===========================

' Zone 1: Users & Academic
subjects ||--o{ curricula : "has"
subjects ||--o{ classes : "taught in"
users ||--o{ classes : "teaches"
classes ||--o{ class_members : "has"
users ||--o{ class_members : "enrolled in"
classes ||--o{ class_projects : "assigned"
projects ||--o{ class_projects : "assigned to"
users ||--o{ class_projects : "assigned by"

' Zone 2: Projects & Groups
curricula ||--o{ projects : "contains"
users ||--o{ projects : "creates"
users ||--o{ projects : "approves"
projects ||--o{ project_milestones : "has"
project_milestones ||--o{ milestone_questions : "has"
classes ||--o{ groups : "has"
projects ||--o{ groups : "works on"
groups ||--o{ group_members : "has"
users ||--o{ group_members : "member of"
groups ||--o{ group_milestones : "tracks"
project_milestones ||--o{ group_milestones : "tracked by"
users ||--o{ group_milestones : "completes"
groups ||--o{ checkpoints : "has"
users ||--o{ checkpoints : "creates"
checkpoints ||--o{ checkpoint_assignments : "assigned to"
users ||--o{ checkpoint_assignments : "assigned"
checkpoints ||--o{ checkpoint_submissions : "submitted"
users ||--o{ checkpoint_submissions : "submits"
groups ||--o{ workspace_cards : "has"
groups ||--o{ tasks : "has"
workspace_cards ||--o{ tasks : "contains"
users ||--o{ tasks : "assigned to"
users ||--o{ tasks : "creates"
tasks ||--o{ tasks : "has subtasks"

' Zone 3: Collaboration
groups ||--o{ meetings : "has"
users ||--o{ meetings : "creates"
meetings ||--o{ meeting_participants : "has"
users ||--o{ meeting_participants : "participates"
groups ||--o{ chat_messages : "has"
users ||--o{ chat_messages : "sends"
classes ||--o{ resources : "has"
groups ||--o{ resources : "has"
users ||--o{ resources : "uploads"
groups ||--o{ whiteboard_sessions : "has"
users ||--o{ whiteboard_sessions : "creates"
groups ||--o{ document_sessions : "has"
users ||--o{ document_sessions : "creates"

' Zone 4: Evaluation
users ||--o{ peer_reviews : "reviews"
users ||--o{ peer_reviews : "reviewed by"
groups ||--o{ peer_reviews : "in group"
groups ||--o{ group_evaluations : "evaluated"
users ||--o{ group_evaluations : "evaluates"
users ||--o{ member_evaluations : "evaluated"
users ||--o{ member_evaluations : "evaluates"
groups ||--o{ member_evaluations : "in group"
milestone_questions ||--o{ milestone_answers : "answered"
users ||--o{ milestone_answers : "answers"
groups ||--o{ milestone_answers : "for group"
checkpoints ||--o{ checkpoint_evaluations : "evaluated"
users ||--o{ checkpoint_evaluations : "evaluates"

' Zone 5: Notifications
users ||--o{ notifications : "receives"

' Zone 6: Additional
users ||--o{ activity_logs : "performs"

@enduml
